# petit

./: CMakeLists.txt
src/: main.cpp
src/ast/: expr.hpp  list_expr.cpp  list_expr.hpp  number_expr.cpp  number_expr.hpp  symbol_expr.cpp  symbol_expr.hpp
src/env/: env.hpp
src/eval/: eval.cpp  eval.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
